JavaScriptCore: JSExport protocol with an NSInteger property converts negative values to 18446744073709552000 https://bugs.webkit.org/show_bug.cgi?id=145563

Patch by Keith Miller <keith_miller@apple.com> on 2015-06-02
Reviewed by Darin Adler.

The Objective-C bindings were improperly converting negative
long long/NSIntegers to 18446744073709552000 because they
were converted to unsigned numbers.

* API/ObjcRuntimeExtras.h:
(parseObjCType):
* API/tests/testapi.mm:
(testObjectiveCAPIMain):
(checkNegativeNSIntegers):
(testObjectiveCAPI):

Canonical link: https://commits.webkit.org/163607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185122 268f45cc-cd09-0410-ab3c-d52691b4dbfc